# mop

./: .gitignore  CMakeLists.txt  README.md  TODO.md
data/cgp-demo/: 3-methylindole.lgf  3-methylindole.tw  ATP.lgf  ATP.tw  acetamide.lgf  acetamide.tw  butane.lgf  butane.tw  p-cresol.lgf  p-cresol.tw  propanoicacid.lgf  propanoicacid.tw  vancomycin.lgf  vancomycin.tw
data/difficult-brisbane/: 1034.mtb  1189.lgf  1189.mtb  1224.mtb  4595.lgf  4595.mtb  4658.lgf  4658.mtb  467.mtb  6314.mtb  6741.mtb  6800.mtb  6819.mtb  804.mtb
data/fragments/: 16841.lgf  16842.lgf  _I0F.lgf  _I0X.lgf  benzeen.lgf
data/fragments/arbitrary_qm1/: 10524.lgf  1057.lgf  10606.lgf  10897.lgf  10901.lgf  10903.lgf  10905.lgf  10908.lgf  10909.lgf  10910.lgf  10922.lgf  10925.lgf  10932.lgf  11057.lgf  1113.lgf  1115.lgf  11188.lgf  1127.lgf  1210.lgf  12186.lgf  12512.lgf  12564.lgf  13082.lgf  1361.lgf  13902.lgf  13937.lgf  14157.lgf  14529.lgf  1476.lgf  14803.lgf  14917.lgf  14943.lgf  15086.lgf  15202.lgf  15294.lgf  15496.lgf  15725.lgf  15850.lgf  15923.lgf  16025.lgf  (+133 more)
data/fragments/lipids/: 10758.lgf  10872.lgf  10900.lgf  1305.lgf  14814.lgf  15680.lgf  15690.lgf  15997.lgf  16073.lgf  16088.lgf  16108.lgf  16113.lgf  16123.lgf  16370.lgf  16371.lgf  16372.lgf  16499.lgf  1663.lgf  16978.lgf  1800.lgf  2059.lgf  2063.lgf  2072.lgf  2130.lgf  2162.lgf  2871.lgf  3040.lgf  4195.lgf  4482.lgf  4485.lgf  4487.lgf  4493.lgf  4510.lgf  4511.lgf  4512.lgf  4534.lgf  4542.lgf  4776.lgf  5380.lgf  5477.lgf  (+94 more)
data/fragments/mixed_qm1/: 1021.lgf  10906.lgf  10923.lgf  1112.lgf  11196.lgf  1122.lgf  1123.lgf  1124.lgf  1125.lgf  1129.lgf  11396.lgf  11600.lgf  11967.lgf  11979.lgf  12287.lgf  12340.lgf  12634.lgf  12736.lgf  12937.lgf  12938.lgf  12961.lgf  13391.lgf  (+57 more)
script/: README.md  fragments.py  getMolecules.py
src/: atb2lgf.cpp  bk.cpp  bronkerbosch.h  config.h.in  fragments.cpp  molecule.h  partition.cpp  partitiontree.cpp  readsolution.cpp  symmetrize.cpp  treedecomposition.h
src/cgp/: extmolecule.h  solver.h  solverdp.h  solverdummy.h  solverexactcover.h  solvermatching.h  solvertreewidthdp.h  solvertreewidthmemdp.h
src/cgp-demo/: cgp-demo.pro  cwi-demo.pro  edgeitem.cpp  edgeitem.h  errorkeyitem.cpp  errorkeyitem.h  graphkeywidget.cpp  graphkeywidget.h  graphwidget.cpp  graphwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moleculegraphviz.h  moleculeviz.h  nodeitem.cpp  nodeitem.h  nodekeyitem.cpp  nodekeyitem.h  selectmoleculedialog.cpp  selectmoleculedialog.h  selectmoleculedialog.ui
src/fragments/: bronkerboschconnected.h  product.h
src/symmetrization/: symmetrization.h  symmetrizationautomorphism.h
